web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-setter-array-destructuring/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,17)
1|({ set f([a]) { "use strict" } })
 |               ^
